Add Nginx proxy for API calls to solve Mixed Content issues

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,24 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
+    # Proxy para API - redirige al backend
+    location /api/ {
+        proxy_pass http://autocontrolsanitarioapp-backend-5plj5f-f5ea1c-31-97-193-114.traefik.me/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CORS headers
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization, x-auth-token" always;
+        
+        if ($request_method = 'OPTIONS') {
+            return 200;
+        }
+    }
+
     # Configuración para SPA (Single Page Application)
     location / {
         try_files $uri $uri/ /index.html;
