Fix CORS configuration and improve backend deployment - Enhanced CORS middleware with proper preflight handling - Added debugging endpoints (/health, /api/cors-test) - Improved error handling and logging - Added deployment documentation and troubleshooting guides - Updated frontend API URL configuration with debugging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    expose:
-      - "80"
+    ports:
+      - "8080:80"
     environment:
       - VITE_API_URL=${VITE_API_URL}
       - VITE_APP_NAME=${VITE_APP_NAME:-Autocontrol Sanitario Pro}
