--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "server": "nodemon server.js"
   },
   "dependencies": {
