Complete backend deployment fix and documentation
- Fixed Docker Compose configuration (ports mapping)
- Simplified Dockerfile for better compatibility
- Added robust startup script with environment logging
- Created comprehensive deployment guides:
  * DESPLIEGUE_DOKPLOY_PASO_A_PASO.md - Step-by-step guide
  * CHECKLIST_DESPLIEGUE.md - Quick deployment checklist
- Added deployment automation scripts
- Updated backend package.json with new start script
- All changes ready for Dokploy redeployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "description": "Backend for Autocontrol Sanitario Pro",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node start.js",
+    "start:direct": "node server.js",
     "dev": "nodemon server.js",
     "server": "nodemon server.js"
   },
