--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
 # Dockerfile para el backend Node.js
 FROM node:18-alpine
 
+# Instalar wget para healthcheck
+RUN apk add --no-cache wget
+
 # Establecer directorio de trabajo
 WORKDIR /app
 
@@ -12,14 +15,6 @@ RUN npm install --only=production
 
 # Copiar código fuente
 COPY . .
-
-# Crear usuario no-root para seguridad
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nodejs -u 1001
-
-# Cambiar ownership de los archivos
-RUN chown -R nodejs:nodejs /app
-USER nodejs
 
 # Exponer puerto
 EXPOSE 5000
